# noriskclient-launcher

./: bun.lockb  noriskclient-launcher.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/src/: config.rs  error.rs  lib.rs  logging.rs  main.rs
src-tauri/src/addons/: datapack_manager.rs  resourcepack_manager.rs  shader_manager.rs
src-tauri/src/app/: app_data.rs  cape_api.rs  gui.rs  modrinth_api.rs
src-tauri/src/commands/: cape_command.rs  config_commands.rs  file_command.rs  minecraft_auth_command.rs  minecraft_command.rs  mod.rs  modrinth_commands.rs  path_commands.rs  process_command.rs  profile_command.rs  teatime_config_commands.rs  updater_commands.rs
src-tauri/src/custom_servers/: manager.rs
src-tauri/src/integrations/: mod.rs  modrinth.rs  mrpack.rs  norisk_packs.rs  norisk_versions.rs
src-tauri/src/minecraft/: installer.rs  launcher.rs  minecraft_auth.rs  mod.rs  prelauncher.rs  version.rs
src-tauri/src/minecraft/api/: cape_api.rs  fabric_api.rs  forge_api.rs  mc_api.rs  mclogs_api.rs  mod.rs  neo_forge_api.rs  norisk_api.rs  quilt_api.rs
src-tauri/src/minecraft/auth/: minecraft_auth.rs  mod.rs
src-tauri/src/minecraft/downloads/: fabric_libraries_download.rs  forge_installer_download.rs  forge_libraries_download.rs  java_download.rs  logging_config_download.rs  mc_assets_download.rs  mc_client_download.rs  mc_libraries_download.rs  mc_natives_download.rs  mod.rs  mod_downloader.rs  mod_resolver.rs  neo_forge_installer_download.rs  neo_forge_libraries_download.rs  norisk_assets_download.rs  norisk_pack_downloader.rs  quilt_libraries_download.rs
src-tauri/src/minecraft/dto/: fabric_meta.rs  forge_install_profile.rs  forge_maven_meta.rs  mod.rs  (+10 more)
src-tauri/src/state/: config_state.rs  discord_state.rs  event_state.rs  mod.rs  norisk_packs_state.rs  norisk_versions_state.rs  process_state.rs  profile_state.rs  skin_state.rs  state_manager.rs  teatime_config_state.rs
src-tauri/src/utils/: copy_mc_data.rs  datapack_utils.rs  file_utils.rs  hash_utils.rs  mc_utils.rs  mod.rs  path_utils.rs  profile_utils.rs  resourcepack_utils.rs  shaderpack_utils.rs  system_info.rs
src-tauri/tests/: mrpack_test.rs  mrpack_tests.rs
(+168 files in other folders)
