[package]
name = "noriskclient-launcher-v3"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "noriskclient_launcher_v3_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
directories = "5.0"
once_cell = "1.18"
futures = "0.3"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
sha1 = "0.10.6"
zip = "2.6.1"
flate2 = "1.0"
tar = "0.4"
async_zip = { version = "0.0.17", features = ["full"] }
semver = "1.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1.0"
rand = "0.8.5"
sha2 = "0.10.8"
p256 = "0.13.2"
base64 = "0.21.7"
jsonwebtoken = "9.3.0"
byteorder = { version = "1.4" }
machineid-rs = "1.2.4"
log = "0.4"
log4rs = "1.3.0"
async-trait = "0.1.80"
hex = "0.4"
sysinfo = "0.34.2"
sanitize-filename = "0.6.0"
env_logger = "0.11"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-clipboard-manager = "2.2.2"
tempfile = "3.19.1"
dirs = "6.0.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
lto = true      # Enable link-time optimization
opt-level = "z" # Optimize for size ("s" is another option)
codegen-units = 1 # Reduce number of codegen units to increase optimizations

